# test_chat

./: Dockerfile  Makefile  README.md  docker-compose.yaml  env-example  init_test_data.py  pyproject.toml  servers.json
alembic/: env.py
alembic/versions/: aabd994a390d_initial_migration.py  e6606d818cff_initial_migration.py
chat/: main.py
chat/src/api/v1/: router.py
chat/src/api/v1/endpoints/: chat.py  message.py  user.py  ws.py
chat/src/core/: config.py  logger.py  security.py
chat/src/db/: dependencies.py  models.py  session.py
chat/src/repositories/: base.py  chat_repo.py  dependencies.py  group_repo.py  message_repo.py  user_repo.py
chat/src/schemas/: chat.py  group.py  message.py  pagination.py  user.py
chat/src/services/: base.py  chat_service.py  dependencies.py  message_service.py  user_service.py  ws_service.py
chat/src/utils/: async_lock.py  email.py
chat/test/: conftest.py  test_chat.py  test_message.py
